<resources>
    <string name="app_name">Fat 2 Fit</string>
    <string name="logout_button">Log Out</string>
    <string name="userprofile_button">User Profile</string>
    <string name="workout_textview">WORKOUT</string>
    <string name="fitnessinformation_textview"><u>Fitness Information</u></string>
    <string name="RFM_textview">RFM: </string>
    <string name="pushups_textview">Push Ups: </string>
    <string name="situps_textview">Sit Ups: </string>
    <string name="day1_textview">DAY 1</string>
    <string name="day2_textview">DAY 2</string>
    <string name="day3_textview">DAY 3</string>
    <string name="day4_textview">DAY 4</string>
    <string name="day5_textview">DAY 5</string>
    <string name="day6_textview">DAY 6</string>
    <string name="day7_textview">DAY 7</string>
    <string name="day1Name_textview">Name: </string>
    <string name="day1Reps_textview">Reps: </string>
    <string name="sharedpreference">WorkoutUserSharedPreferences</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_textview">USER PROFILE</string>
    <string name="submit_button">SUBMIT</string>
    <string name="frequency_textview">Frequency of Exercise</string>
    <string name="tutorial_textview">tutorial</string>
    <string name="situp_textview">Situp Score</string>
    <string name="pushup_textview">Push up Score</string>
    <string name="waist_textview">Waist Circumference</string>
    <string name="height_textview">Height</string>
    <string name="adminPage_textview">ADMIN HOME PAGE</string>
    <string name="searchButton_textview">SEARCH</string>
    <string name="resetButton_textview">RESET</string>

    <string name="modify_button">MODIFY</string>
    <string name="modify_user_profile_textview">MODIFY USER PROFILE</string>

    <string name="login_textview">LOG IN</string>
    <string name="username_textview">Enter Email</string>
    <string name="enter_password_textview">Enter Password</string>
    <string name="sign_up_textview">Sign Up</string>
    <string name="forgot_password_textview">Forgot Password?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="checkAns">Check Answers</string>
    <string name="security_question_1">Security Question 1</string>
    <string name="select_the_first_security_question">Select the First Security Question</string>
    <string name="security_question_answer_1">Security Question Answer 1</string>
    <string name="security_question_2">Security Question 2</string>
    <string name="select_the_second_security_question">Select the Second Security Question</string>
    <string name="security_question_answer_2">Security Question Answer 2</string>

    <string name="new_password">New Password</string>
    <string name="reset">RESET</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="next_button">NEXT</string>

    <string name="create_group">Create Group</string>
    <string name="group_creation">"Choose What Name Your Group Is Going To Be"</string>
    <string name="group_ID">Your Group ID Is:</string>

    <string name="fitness_type">Fitness Type:</string>
    <string name="work_rate">Work Rate:</string>
    <string name="instructions">Instructions:</string>
    <string name="progress">Progress:</string>
    <string name="recommended_workout">Recommended Workouts</string>
    <string name="based_BMI_label">Based on Your BMI of:</string>
    <string name="view_details">View Details</string>

    <string name="challenge_name">Challenge Name</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>

    <string name="return_button">Return to Home </string>
    <string name="add_challenge_button">Add A Challenge</string>
    <string name="challenge_label">Challenges Currently Being Run</string>
    <string name="view_edit_label">Click on a challenge to view and edit details</string>

    <string name="my_challenges">My Active Challenges</string>
    <string name="viewMyChallenges">Click on a challenge to view details</string>

    <string name="add_challenge_title">What are the details of this new challenge</string>
    <string name="challenge_condition">Challenge Condition:</string>
    <string name="challenge_remaining_days">Remaining Days:</string>
    <string name="go_back_button">Go Back</string>

    <string name="challenge_details_title">Details of the Challenge</string>

    <string name="groupCode_plainText">Group Code</string>
    <string name="groupCode_textview">Enter Group Code</string>
    <string name="joinGroup_button">Join Group</string>
    <string name="leaveGroup_button">Leave Group</string>
    <string name="title_activity_test_nav">TestNavActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="AssignExercise_Assign">Assign</string>
    <string name = "AssignExercise_Back">Back</string>

    <string name = "challenge_title">Challenge title: </string>
    <string name = "challenge_description">Challenge escription: </string>
    <string name = "challenge_distance">Challenge distance: </string>
    <string name = "challenge_state">Challenge state: </string>


    <string-array name="workouts">
        <item>Push Up</item>
        <item>Bench Press</item>
        <item>Sit Up</item>
        <item>Squats</item>
        <item>Curls</item>
        <item>Planks</item>
        <item>Jumping Jacks</item>
        <item>Lift</item>
        <item>Running</item>
        <item>Shrugs</item>
    </string-array>

    <string-array name="workouts_details">
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
    </string-array>

    <string-array name="reward">
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
        <item>Placeholder Reward</item>
    </string-array>

    <string-array name="reward_details">
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
        <item>Placeholder Details</item>
    </string-array>

    <string-array name="reward_challenge">
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
        <item>Placeholder Challenge</item>
    </string-array>

    <!--Recommended Workout Strings -->
    <string name="workoutname_text">Workout Name</string>
    <string name="challenge_text">Challenge</string>
    <string name="workout_progress_text">Workout Progress:</string>
    <string name="coach_instructions_text">Coachs Instructions:</string>


</resources>